--- a/src/less/style.less
+++ b/src/less/style.less
@@ -659,6 +659,93 @@ header {
 
 
 
+/***************** DEL 8 - Extra ******************/
+
+.del8extra {
+  padding: 100px 0;
+  background: #eee;
+  border-top: 1px solid rgba(0,0,0,0.05);
+  color: #333;
+  @media (max-width: 768px) {
+    padding-top: 60px;
+  }
+  small {
+    font-size: 12px;
+    color: #555;
+    line-height: 1.5;
+    display: inherit;
+  } 
+  .text {
+    margin-bottom: 60px;
+    h2 {
+      font-weight: 300;
+      .lg {
+        font-size: 60pt;
+        font-weight: 700;
+        display: block;
+        margin-bottom: 10px;
+        @media (max-width: 768px) { 
+          font-size: 35pt;
+          line-height: 1.1;
+        }
+      }
+    }
+    h3 {
+      margin-bottom: 20px;
+    }
+  }
+  .stats { 
+    margin-top: 60px;
+    text-align: center;
+    .stat {
+      position: relative;
+      display: inline-block;
+      height: 600px;
+      width: 50%;
+      @media (max-width: 768px) { 
+        width: 70%;
+      }
+      .content {
+        position: absolute;
+        margin-top: 15px;
+        bottom: 0;
+        width: 100%;
+        border-radius: 3px;
+        img {
+          margin-top: -100px;
+          width: 40%;
+        }
+      }
+    }
+    .sweden .content {
+      background: #FFCB04;
+    }
+    .usa .content {
+      background: #DF393D;
+    }
+    .numbers {
+      font-size: 17pt;
+      @media (max-width: 768px) {
+        font-size: 8pt; 
+      }
+      .number {
+        font-weight: 700;
+      }
+      .animal {
+        font-weight: 300;
+        display: block;
+        font-size: 13pt;
+        @media (max-width: 768px) {
+          font-size: 7pt; 
+        }
+      }
+    }
+  }
+}
+
+
+
+
 /***************** DEL 9 - Kossan ******************/
 
 .del9 {
@@ -947,11 +1034,20 @@ header {
     width: 50%;
   }
   .text {
-    margin-top: 100px;
+    margin-top: 70px;
     margin-bottom: 30px;
     @media (max-width: 768px) {
       margin-top: 0;
     } 
+  }
+  .water {
+    color: #2684C4;
+  }
+  .land {
+    color: #b08768;
+  }
+  .gas {
+    color: #c0b9ad;
   }
   .stats { 
     margin-bottom: 15px;
