--- a/src/less/style.less
+++ b/src/less/style.less
@@ -637,7 +637,7 @@ header {
       @media (max-width: 768px) {
         font-size: 8pt; 
       }
-      .counter {
+      .number {
         font-weight: 700;
       }
       .animal {
@@ -1484,6 +1484,12 @@ header {
       color: #777;
       font-size: 10pt;
       line-height: 1.5;
+    }
+    .cookieText {
+      color: #888; 
+      line-height: 1.2; 
+      margin-top: 8px; 
+      font-size: 15px;
     }
     .voting {
       p {
