Changed bg color for fish

--- a/src/less/style.less
+++ b/src/less/style.less
@@ -900,7 +900,7 @@ header {
 
 .del13 {
   color: #fff;
-  background: #4D5666 url(../img/fish_bubbles.svg) 0px 0px;
+  background: #475572 url(../img/fish_bubbles.svg) 0px 0px;
   animation: fish_bubbles 20s linear infinite;
   .text {
     padding-top: 100px;
